--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 600px;
+}
