--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,4 +1,12 @@
-<h1>Your coach says:</h1>
-<p><%= @question %></p>
-<p><%= @answer %></p>
-<%= link_to 'Ask another question', ask_path %>
+<div class="container mt-5">
+  <h1 class="display-4">Stupid Coaching</h1>
+  <div class="mt-4">
+    <p class="lead"><i><%= @question %></i></p>
+    <p>– You</p>
+  </div>
+  <div class="mt-3 p-3 bg-light border rounded">
+    <p class="lead font-weight-bold"><%= @answer %></p>
+    <p>– Your coach</p>
+  </div>
+  <%= link_to 'Ask a new question', ask_path, class: 'mt-4 btn btn-link' %>
+</div>
