--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,10 @@
-<h1>Ask your coach anything</h1>
-<form action="/answer" method="get">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
-</form>
+<div class="container mt-5">
+  <h1 class="display-4">Stupid Coaching</h1>
+  <form action="/answer" method="get" class="mt-4">
+    <div class="form-group">
+      <label for="question">Ask your coach anything</label>
+      <input type="text" class="form-control" id="question" name="question">
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Ask!</button>
+  </form>
+</div>
